BM-105 Collection sites map: fix popup layout issues

--- a/bpam/apps/base_contextual/static/map.css
+++ b/bpam/apps/base_contextual/static/map.css
@@ -15,7 +15,8 @@
 
 .leaflet-popup-content .site-popup-table {
     max-height: 300px;
-    overflow: scroll;
+    overflow-x: hide;
+    overflow-y: auto;
 }
 
 
